--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "mariadb": "^3.4.0",
     "mysql2": "^3.11.5",
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
